--- a/sass/main.sass
+++ b/sass/main.sass
@@ -297,6 +297,7 @@ nav
 	position: fixed
 	top: 0
 	left: 0
+	height: 75px
 	background: $menu_bg
 	z-index: 10
 
@@ -304,12 +305,12 @@ header
 	min-height: 100vh
 	background: url(../img/header_bg.jpg) center bottom/cover
 	padding-bottom: 53px
-	@include xl
+	@include xxls
 		height: 800px
 		min-height: auto
 	.container,
 	.header__wrap
-		@include xl
+		@include xxls
 			height: 100%
 			min-height: auto
 .header__wrap
