--- a/sass/_vars.sass
+++ b/sass/_vars.sass
@@ -13,7 +13,7 @@ $green: #30BCC9
 $yellow: #FFC41E
 $red: #F6404F
 $ice_cream: #FAF3E3
-$menu_bg: #251204db
+$menu_bg: rgba(0, 0, 0, 0.8)
 $text_dark: #2E373B
 $header_link_hover: #3d464c
 $footer_link: #E0E0E0
